@@ -1,5 +1,7 @@
 - Expanded support for the local component registry. We register it now right
   after it has been created in Plone >= 3.0 as it is needed during site setup.
+  Also we set the portal as a site whenever it is accessed, as this is needed to
+  get the CMF skin acquisition to work.
 
 0.9.0
 - Prepared for switching ZopeTestCase to Zope3 interfaces.
